Update for sf release -- HJB

--- a/sauc.html
+++ b/sauc.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=UnifrakturMaguntia">
-        <link rel="stylesheet" href="http://Herberts-MacBook-Pro.local/~yaya/sauc/mathscribe-0.2.0/jqmath-0.2.0.css">
+        <link rel="stylesheet" href="http://arcib.dowling.edu/~yaya/sauc/mathscribe-0.2.0/jqmath-0.2.0.css">
 	
-	<script src="http://Herberts-MacBook-Pro.local/~yaya/sauc/mathscribe-0.2.0/jquery-1.4.3.min.js"></script>
-	<script src="http://Herberts-MacBook-Pro.local/~yaya/sauc/mathscribe-0.2.0/jqmath-etc-0.2.0.min.js"></script>
+	<script src="http://arcib.dowling.edu/~yaya/sauc/mathscribe-0.2.0/jquery-1.4.3.min.js"></script>
+	<script src="http://arcib.dowling.edu/~yaya/sauc/mathscribe-0.2.0/jqmath-etc-0.2.0.min.js"></script>
 	<!-- <script>M.MathPlayer = false;</script> -->
 
 <!--
@@ -132,7 +132,7 @@ Search of Alternate Unit Cells
 <br /><br />Dowling College and Micro Encoder Inc.
 <br />Work Supported In Part By NIGMS
 <br /><br />Contact Email: <A HREF=mailto:kjmcgill7@gmail.com>kjmcgill7@gmail.com</A>
-<FORM method=POST ACTION="http://Herberts-MacBook-Pro.local/cgi-bin/cgiwrap/yaya/sauc.csh">
+<FORM method=POST ACTION="http://arcib.dowling.edu/cgi-bin/cgiwrap/yaya/sauc.csh">
 </center>
 <font size="-1">
 A crystallographic cell is a representation of a lattice, but each lattice can be represented
