Update version to 0.6.4 with fixes to sauc.html and sauc.csh by KJM -- HJB

--- a/sauc.html
+++ b/sauc.html
@@ -127,7 +127,7 @@ Search of Alternate Unit Cells - SAUC
 <center>
 <H1>SAUC</H1>
 Search of Alternate Unit Cells
-<br />Copyright Keith J McGill 2013
+<br />Copyright Keith J. McGill 2013
 <br /><br />Keith J McGill, Mojgan Asadi, Maria T. Karakasheva, Lawrence C. Andrews, Herbert J. Bernstein
 <br /><br />Dowling College and Micro Encoder Inc.
 <br />Work Supported In Part By NIGMS
@@ -347,9 +347,9 @@ FILE OR FILES AND NOT WITH AUTHORS OF THE PROGRAMS OR DOCUMENTS.
 
 <P>
 This program and related scripts are available as 
-a <a href="http://downloads.sf.net/iterate/sauc-0.6.3.tar.gz">tarball</a>
+a <a href="http://downloads.sf.net/iterate/sauc-0.6.4.tar.gz">tarball</a>
 or a 
-<a href="http://downloads.sf.net/iterate/sauc-0.6.3.zip">zip file</a>.
+<a href="http://downloads.sf.net/iterate/sauc-0.6.4.zip">zip file</a>.
 <br />The information below is available for download from 
 <a href="http://arxiv.org/abs/1307.1811">arxiv.org/abs/1307.1811</a>.
 <p>
@@ -785,7 +785,7 @@ Mighell, A. D. (2002). Journal of Research - National Institute of Standards and
 NIH/EPA (1980). User's Manual NIH-EPA Chemical Information System, chap. User's Guide to CRYST The X-Ray Crystallographic Search System. National Institutes of Health, Environmental Protections Agency.<br />
 Pearson, W. B. (1958). Handbook of Lattice Spacings and Structures of Metals and Alloys. International Series of Monographs on Metal and Physics and Physical Metallurgy, G. V. Raynor (ed.). Pergamon Press.<br />
 Ramraj, V., Esnouf, R. &amp; Diprose, J. (2011). Nearest-Cell A fast and easy tool for locating crystal matches in the PDB. Tech. rep. Division of Structural Biology, University of Oxford. http://www.strubi.ox.ac.uk/nearest-cell/nearest-cell.cgi.<br />
-Sch&uuml;ttelkopf, A. W., Harrison, J. A., Boxer, D. H. &amp; Hunter, W. N. (2002). Journal of Bio- logical Chemistry, 277(17), 15013 -- 15020.<br />
+Sch&uuml;ttelkopf, A. W., Harrison, J. A., Boxer, D. H. &amp; Hunter, W. N. (2002). Journal of Biological Chemistry, 277(17), 15013 -- 15020.<br />
 Singh, G., Gourinath, S., Saravanan, K., Sharma, S., Bhanumathi, S., Betzel, C., Srinivasan, A. &amp; Singh, T. P. (2004). Acta Crystallogr. F61(1), 8 --  13.<br />
 Singh, G., Gourinath, S., Sarvanan, K., Sharma, S., Bhanumathi, S., Betzel, C., Yadav, S., Srinivasan, A. &amp; Singh, T. P. (2005). J. Struct. Biol. 149(3), 264 -- 272.<br />
 Singh, G., Gourinath, S., Sharma, S., Paramasivam, M., Srinivasan, A. &amp; Singh, T. P. (2001). J. Mol. Biol. 307(4), 1049 -- 1059.<br />
@@ -811,7 +811,7 @@ Wyckoff, R. W. G. (1931). The structure of crystals. No. 19. The Chemical Catalo
 </center>
 
 <hr>
-Updated 12 July 2013.
+Updated 23 October 2013.
 </font>
 </body>
 </html>
