Fix extraneous } as per KM -- HJB

--- a/sauc.html
+++ b/sauc.html
@@ -347,9 +347,9 @@ FILE OR FILES AND NOT WITH AUTHORS OF THE PROGRAMS OR DOCUMENTS.
 
 <P>
 This program and related scripts are available as 
-a <a href="http://downloads.sf.net/iterate/sauc-0.6.4.tar.gz">tarball</a>
+a <a href="http://downloads.sf.net/iterate/sauc-0.6.4.1.tar.gz">tarball</a>
 or a 
-<a href="http://downloads.sf.net/iterate/sauc-0.6.4.zip">zip file</a>.
+<a href="http://downloads.sf.net/iterate/sauc-0.6.4.1.zip">zip file</a>.
 <br />The information below is available for download from 
 <a href="http://arxiv.org/abs/1307.1811">arxiv.org/abs/1307.1811</a>.
 <p>
@@ -692,7 +692,7 @@ The three alternate cells cited by (Le Trong &amp; Stenkamp, 2007) are marked wi
 The Nearest Cell results are from the 
 <a href="http://www.strubi.ox.ac.uk/nearest-cell/nearest-cell.cgi">www.strubi.ox.ac.uk/nearest-cell/nearest-cell.cgi</a> 
 web site. 
-The NCDist and V7 results are from SAUC.</caption>}
+The NCDist and V7 results are from SAUC.</caption>
 <tr><th valign="top">PDB ID</th><th>Nearest-<br />Cell<br />metric</th>
              <th>Sqrt of<br />Nearest-<br />Cell</th>
              <th valign="top">V7<br />metric</th>
