Update to release 0.8 -- MA + HJB

--- a/sauc.html
+++ b/sauc.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=UnifrakturMaguntia">
-        <link rel="stylesheet" href="http://iterate.sf.net/sauc/mathscribe-0.2.0/jqmath-0.2.0.css">
+        <link rel="stylesheet" href="http://arcib.dowling.edu/~yaya/sauc/mathscribe-0.2.0/jqmath-0.2.0.css">
 	
-	<script src="http://iterate.sf.net/sauc/mathscribe-0.2.0/jquery-1.4.3.min.js"></script>
-	<script src="http://iterate.sf.net/sauc/mathscribe-0.2.0/jqmath-etc-0.2.0.min.js"></script>
+	<script src="http://arcib.dowling.edu/~yaya/sauc/mathscribe-0.2.0/jquery-1.4.3.min.js"></script>
+	<script src="http://arcib.dowling.edu/~yaya/sauc/mathscribe-0.2.0/jqmath-etc-0.2.0.min.js"></script>
 	<!-- <script>M.MathPlayer = false;</script> -->
 
 <!--
@@ -127,12 +127,13 @@ Search of Alternate Unit Cells - SAUC
 <center>
 <H1>SAUC</H1>
 Search of Alternate Unit Cells
-<br />Copyright Keith J. McGill 2013
+<br />Copyright Keith J. McGill 2013, 2014
 <br /><br />Keith J McGill, Mojgan Asadi, Maria T. Karakasheva, Lawrence C. Andrews, Herbert J. Bernstein
+<br /><br />Rev 0.8, 24 Apr 2014, Mojgan Asadi, Herbert J. Bernstein
 <br /><br />Dowling College and Micro Encoder Inc.
 <br />Work Supported In Part By NIGMS
 <br /><br />Contact Email: <A HREF=mailto:kjmcgill7@gmail.com>kjmcgill7@gmail.com</A>
-<FORM method=GET ACTION="http://iterate.sf.net/cgi-bin/sauc.csh">
+<FORM method=GET ACTION="http://arcib.dowling.edu/cgi-bin/cgiwrap/yaya/sauc.csh">
 </center>
 <font size="-1">
 A crystallographic cell is a representation of a lattice, but each lattice can be represented
@@ -184,7 +185,7 @@ Lattice Centering:</th>
 </td>
 </tr>
 <th align="left">
-Algorithm:</th>
+Metric:</th>
 <tr><td>
 <input type="radio" name="Algorithm" value="1" />L1<br />
 <input type="radio" name="Algorithm" value="2" />L2<br />
@@ -220,7 +221,7 @@ Similarity:</th>
 <tr><td>
 <input type="radio" name="Similarity" value="1" />Nearest<br />
 <input type="radio" name="Similarity" value="2" /checked>Sphere<br />
-Range of S<td><br /><br /><INPUT TYPE="text" onchange="pfloat(this)" NAME="RangeSphere"VALUE="2.5" SIZE="9"></td>
+Radius of S<td><br /><br /><INPUT TYPE="text" onchange="pfloat(this)" NAME="RangeSphere"VALUE="2.5" SIZE="9"></td>
 </td></tr>
 <tr><td>
 <input type="radio" name="Similarity" value="3" />Range<br />
@@ -347,13 +348,25 @@ FILE OR FILES AND NOT WITH AUTHORS OF THE PROGRAMS OR DOCUMENTS.
 
 <P>
 This program and related scripts are available as 
-a <a href="http://downloads.sf.net/iterate/sauc-0.6.4.1.tar.gz">tarball</a>
+a <a href="http://downloads.sf.net/iterate/sauc-0.8.0.tar.gz">tarball</a>
 or a 
-<a href="http://downloads.sf.net/iterate/sauc-0.6.4.1.zip">zip file</a>.
+<a href="http://downloads.sf.net/iterate/sauc-0.8.0.zip">zip file</a>.
 <br />The information below is available for download from 
 <a href="http://arxiv.org/abs/1307.1811">arxiv.org/abs/1307.1811</a>.
 <p>
 
+<a name="Rev_0.8"></a>
+<h2>Revison 0.8</h2>
+<p>
+Revision 0.8 of 24 April 2014 has revised output, following the suggestions of Graeme Winter and 
+the good example of Nearest-Cell (Ramraj et al., 2011) in giving some of the provenance of the
+cell and organizing long output lists into collapsed lists of families.  Unlike Nearest-Cell
+we have chosen to organize the families on the PDB HEADER field, rather than the sequence.
+For clarity, many uses of the term "algorithm" have been changed to "metric".  The output
+of the nearest cell search has been changed to include the distance and to conform to the
+style of the style of the Sphere search output.  The NCDist metric algorithm has been updated
+to the most current release.  -- MA &amp; HJB
+<p>
 <a name="Introduction"></a>
 <h2>Introduction</h2> 
 <p>
@@ -811,7 +824,7 @@ Wyckoff, R. W. G. (1931). The structure of crystals. No. 19. The Chemical Catalo
 </center>
 
 <hr>
-Updated 23 October 2013.
+Updated 25 April 2014.
 </font>
 </body>
 </html>
