--- a/sauc-1.2.1.html
+++ b/sauc-1.2.1.html
@@ -1,29 +1,29 @@
-`<!doctype html public "-//IETF//DTD HTML 2.0//EN">
+<!doctype html public "-//IETF//DTD HTML 2.0//EN">
 <HTML>
 <HEAD>
 	<meta charset="utf-8">
 	
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=UnifrakturMaguntia">
-        <link rel="stylesheet" href="'MATHSCRIBEURL()`/jqmath-0.4.6.css">
+        <link rel="stylesheet" href="http://http://blondie.arcib.org:8083/sauc-1.2.1/mathscribe-0.4.6/jqmath-0.4.6.css">
 	
-	<script src="'MATHSCRIBEURL()`/jquery-1.4.3.min.js"></script>
-	<script src="'MATHSCRIBEURL()`/jqmath-etc-0.4.6.min.js"></script>
+	<script src="http://http://blondie.arcib.org:8083/sauc-1.2.1/mathscribe-0.4.6/jquery-1.4.3.min.js"></script>
+	<script src="http://http://blondie.arcib.org:8083/sauc-1.2.1/mathscribe-0.4.6/jqmath-etc-0.4.6.min.js"></script>
 	<!-- <script>M.MathPlayer = false;</script> -->
 
 <!--
 To use jqMath in an html file, use a text editor to copy the above lines to the beginning of
 your file, remove any corresponding old tags, and save the file in UTF-8 format.
 
-If you aren''`t writing in English, change "en" above to the correct language code, especially if
+If you aren't writing in English, change "en" above to the correct language code, especially if
 your language allows a comma as a decimal mark (instead of a period).
 
-If you don''`t use Fraktur characters, you can remove the link on line 7, as this may speed up
+If you don't use Fraktur characters, you can remove the link on line 7, as this may speed up
 download times slightly.
 
 You may need to change each "http://arcib.dowling.edu/~mcgillk/bgaol/mathscribe-0.4.6" path above, depending on the directory structure
 that you choose.
 
-You can use a different version of jquery (1.0+) if you prefer.  We''`ve just provided this one
+You can use a different version of jquery (1.0+) if you prefer.  We've just provided this one
 for your convenience.
 
 If you need to use the \html macro, then uncomment the M.MathPlayer line.
@@ -178,7 +178,7 @@ Search of Alternate Unit Cells
 <br />Work Supported In Part By NIGMS
 <br />Original Contact Email: <A HREF=mailto:kjmcgill7@gmail.com>kjmcgill7@gmail.com</A>
 <br />Support Contact Email: <a href=mailto:yayahjb@gmail.com>yayahjb@gmail.com</a>
-<FORM method='CGIMETHOD()` ACTION="'CGIBIN()`/'SAUCCGI()`">
+<FORM method=GET ACTION="http://blondie.arcib.org:8083/~yaya/cgi-bin/sauc-1.2.1.csh">
 </center>
 <font size="-1">
 A crystallographic cell is a representation of a lattice, but each lattice can be represented
@@ -280,22 +280,22 @@ Limit Nearest or Sphere to <INPUT TYPE="text" onchange="pint(this)" NAME="NumHit
 Hits</td>
 <tr><td>
 <input id="SimNear" type="radio" name="Similarity" value="1" 
-onchange="ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangea''`));
-ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangeb''`));
-ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangec''`));
-ifnotcheckedhide(document.getElementById(''`SimSphere''`),document.getElementById(''`RangeSphereLabel''`));
-ifnotcheckedhide(document.getElementById(''`SimSphere''`),document.getElementById(''`SortSphereLabel''`));
-ifcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`NumHitsLabel''`))"/>
+onchange="ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangea'));
+ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangeb'));
+ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangec'));
+ifnotcheckedhide(document.getElementById('SimSphere'),document.getElementById('RangeSphereLabel'));
+ifnotcheckedhide(document.getElementById('SimSphere'),document.getElementById('SortSphereLabel'));
+ifcheckedhide(document.getElementById('SimRange'),document.getElementById('NumHitsLabel'))"/>
 Nearest</td></tr>
 <tr><td>&nbsp;</td></tr>
 <tr><td>
 <input id="SimSphere" type="radio" name="Similarity" value="2" checked 
-onchange="ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangea''`));
-ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangeb''`));
-ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangec''`));
-ifnotcheckedhide(document.getElementById(''`SimSphere''`),document.getElementById(''`RangeSphereLabel''`));
-ifnotcheckedhide(document.getElementById(''`SimSphere''`),document.getElementById(''`SortSphereLabel''`));
-ifcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`NumHitsLabel''`))"/>
+onchange="ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangea'));
+ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangeb'));
+ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangec'));
+ifnotcheckedhide(document.getElementById('SimSphere'),document.getElementById('RangeSphereLabel'));
+ifnotcheckedhide(document.getElementById('SimSphere'),document.getElementById('SortSphereLabel'));
+ifcheckedhide(document.getElementById('SimRange'),document.getElementById('NumHitsLabel'))"/>
 Sphere</td></tr>
 <tr id="RangeSphereLabel" style="visibility:visible"><td colspan=4 align="right">Radius of Sphere
 <INPUT TYPE="text" onchange="pfloat(this)" NAME="RangeSphere" VALUE="2.5" SIZE="9">
@@ -305,12 +305,12 @@ Sphere</td></tr>
 &nbsp;<input type="radio" name="SortbyFam" value="no" />distance</td></tr>
 <tr><td>
 <input id="SimRange" type="radio" name="Similarity" value="3"
-onchange="ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangea''`));
-ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangeb''`));
-ifnotcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`rangec''`));
-ifnotcheckedhide(document.getElementById(''`SimSphere''`),document.getElementById(''`RangeSphereLabel''`));
-ifnotcheckedhide(document.getElementById(''`SimSphere''`),document.getElementById(''`SortSphereLabel''`));
-ifcheckedhide(document.getElementById(''`SimRange''`),document.getElementById(''`NumHitsLabel''`))"/>
+onchange="ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangea'));
+ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangeb'));
+ifnotcheckedhide(document.getElementById('SimRange'),document.getElementById('rangec'));
+ifnotcheckedhide(document.getElementById('SimSphere'),document.getElementById('RangeSphereLabel'));
+ifnotcheckedhide(document.getElementById('SimSphere'),document.getElementById('SortSphereLabel'));
+ifcheckedhide(document.getElementById('SimRange'),document.getElementById('NumHitsLabel'))"/>
 Range<br />
 </td></tr>
 <tr id="rangea" style="visibility:hidden">
@@ -515,7 +515,7 @@ unit cell parameters arranged for material identification were
 &quot;Crystal Structures&quot; (Wyckoff, 1931), &quot;Crystal Data Determinative
 Tables&quot; (Donnay, 1943), and Handbook for Metals and
 Alloys (Pearson, 1958). Early computerized searches were created
-by JCPDS in the mid-1960''`s (Johnson, 2013) and the
+by JCPDS in the mid-1960's (Johnson, 2013) and the
 Cambridge Structural Data file and its search programs (Allen
 et al., 1973).
 <p>
@@ -814,8 +814,8 @@ The NCDist and V7 results are from SAUC.</caption>
 <tr><td>2OSN</td><td></td><td></td><td>0.2</td><td>0.9</td><td>Phospholipase A2 isoform 3</td><td>3.1.1.4</td></tr>
 <tr><td>2CMP</td><td></td><td></td><td>0.7</td><td>1.5</td><td>Terminase small subunit</td><td></td></tr>
 <tr><td>3KP8</td><td>0.43</td><td>0.66</td><td>1.1</td><td>1.7</td><td>VKORC1/Thioredoxin domain protein</td><td></td></tr>
-<tr><td valign="top">3MIJ</td><td></td><td valign="top"></td><td valign="top">1.0</td><td valign="top">1.7</td><td>RNA (5''`-R(*UP*AP*GP*GP*GP*UP<br />
-                                                               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*UP*AP*GP*GP*GP*U)-3''`)</td><td></td></tr>
+<tr><td valign="top">3MIJ</td><td></td><td valign="top"></td><td valign="top">1.0</td><td valign="top">1.7</td><td>RNA (5'-R(*UP*AP*GP*GP*GP*UP<br />
+                                                               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*UP*AP*GP*GP*GP*U)-3')</td><td></td></tr>
 <tr><td>3E56</td><td>0.4</td><td>0.63</td><td>1.5</td><td>1.9</td><td>Putative uncharacterized protein</td></tr>
 <tr><td>1CSQ</td><td>0.49</td><td>0.7</td><td>1.8</td><td>2.0</td><td>Cold Shock Protein B (CSPB)</td></tr>
 <tr><td>3SVI</td><td>0.54</td><td>0.73</td><td>1.9</td><td>2.1</td><td>Type III effector HopAB2</td></tr>
@@ -891,7 +891,7 @@ Mighell, A. D. (2001). Journal of Research - National Institute of Standards and
 106(6), 983 -- 996.<br />
 Mighell, A. D. (2002). Journal of Research - National Institute of Standards and Technology,
 107(5), 425 -- 430.<br />
-NIH/EPA (1980). User''`s Manual NIH-EPA Chemical Information System, chap. User''`s Guide to CRYST The X-Ray Crystallographic Search System. National Institutes of Health, Environmental Protections Agency.<br />
+NIH/EPA (1980). User's Manual NIH-EPA Chemical Information System, chap. User's Guide to CRYST The X-Ray Crystallographic Search System. National Institutes of Health, Environmental Protections Agency.<br />
 Pearson, W. B. (1958). Handbook of Lattice Spacings and Structures of Metals and Alloys. International Series of Monographs on Metal and Physics and Physical Metallurgy, G. V. Raynor (ed.). Pergamon Press.<br />
 Ramraj, V., Esnouf, R. &amp; Diprose, J. (2011). Nearest-Cell A fast and easy tool for locating crystal matches in the PDB. Tech. rep. Division of Structural Biology, University of Oxford. http://www.strubi.ox.ac.uk/nearest-cell/nearest-cell.cgi.<br />
 Sch&uuml;ttelkopf, A. W., Harrison, J. A., Boxer, D. H. &amp; Hunter, W. N. (2002). Journal of Biological Chemistry, 277(17), 15013 -- 15020.<br />
@@ -923,6 +923,6 @@ Wyckoff, R. W. G. (1931). The structure of crystals. No. 19. The Chemical Catalo
 Updated 27 December 2017.
 </font>
 </body>
-</html>'
+</html>
 
 
